# vscp-din-wireless-esp32-can-z102

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old  vscp-din-esp32-can-z102.csv  vscp-din-esp32-can-z102.kicad_sch
.codacy/: codacy.yaml
.github/workflows/: esp-idf-build.yml
design-documents/: notes.txt
docs/: notes.txt
firmware/: .gitignore  .semgrepignore  CHANGELOG.md  CMakeLists.txt  MESHTASTIC_CHAT_TECHNICAL_SUMMARY_2026-03-27.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/.codacy/: codacy.yaml
firmware/docs/: ble-wifi-coexistence-guid-ip.md
firmware/main/: CMakeLists.txt  Kconfig.projbuild  _websrv.c  _websrv.h  callbacks-binary.c  callbacks-link.c  callbacks-vscp-protocol.c  callbacks-ws1.c  callbacks-ws2.c  can4vscp.c  can4vscp.h  idf_component.yml  keep-alive.c  keep-alive.h  main.c  main.h  mqtt.c  mqtt.h  multicastsrv.c  multicastsrv.h  provision.c  tcpsrv.c  tcpsrv.h  tcpsrv_tls.c  udpclient.c  udpclient.h  udpsrv.c  udpsrv.h  urldecode.c  urldecode.h  vscp-binary.c  vscp-binary.h  vscp-mesh.c  vscp-mesh.h  vscp-multicast.c  vscp-multicast.h  vscp-projdefs.h  vscp-ws-common.h  vscp-ws1.c  vscp-ws1.h  (+6 more)
firmware/main/certs/: README.md  prvtkey.example.pem
firmware/test/ws/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  pytest_websocket.py  test_vscp_binary.c  test_vscp_binary.js  test_vscp_binary.py  test_websocket.js  test_ws1.js  test_ws1.py  test_ws2.js  test_ws2.py  test_ws_probe.js  websocket_test_utils.js  ws1_100.html
firmware/tools/: codacy-cli.sh  decode-ble-guid-ip-from-bluetoothctl.py  decode-ble-guid-ip-from-btmon.py  decode-ble-guid-ip.py  idf-flash-artifacts.sh  idf-safe.sh  increment_build.py  validate-coex-flow.sh
firmware/twai_network_listen_only/: sdkconfig  sdkconfig.old
firmware/twai_network_listen_only/main/: CMakeLists.txt  twai_network_example_listen_only_main.c
firmware/twai_network_master/: sdkconfig
firmware/twai_network_master/main/: CMakeLists.txt  twai_network_example_master_main.c
firmware/twai_network_slave/main/: CMakeLists.txt  twai_network_example_slave_main.c
him-card/: him-card.kicad_pcb  him-card.kicad_prl  him-card.kicad_pro  him-card.kicad_sch  history.txt
him-card/gerbers/: him-card-B_Cu.gbr  him-card-B_Mask.gbr  him-card-B_Paste.gbr  him-card-B_Silkscreen.gbr  him-card-Edge_Cuts.gbr  him-card-F_Cu.gbr  him-card-F_Mask.gbr  him-card-F_Paste.gbr  him-card-F_Silkscreen.gbr  him-card-job.gbrjob  him-card.drl
kicad/: .gitignore  connectors.txt  history.txt  vscp-din-esp32-can-z102.kicad_pcb  vscp-din-esp32-can-z102.kicad_prl  vscp-din-esp32-can-z102.kicad_pro  vscp-din-esp32-can-z102.kicad_sch
kicad/gerbers/z102/: vscp-din-esp32-can-z102-B_Cu.gbr  vscp-din-esp32-can-z102-B_Mask.gbr  vscp-din-esp32-can-z102-B_Paste.gbr  vscp-din-esp32-can-z102-B_Silkscreen.gbr  vscp-din-esp32-can-z102-Edge_Cuts.gbr  vscp-din-esp32-can-z102-F_Cu.gbr  vscp-din-esp32-can-z102-F_Mask.gbr  vscp-din-esp32-can-z102-F_Paste.gbr  vscp-din-esp32-can-z102-F_Silkscreen.gbr  vscp-din-esp32-can-z102-job.gbrjob  vscp-din-esp32-can-z102.drl
libs/: ESP32-C3-MINI-1-N4.lib  ESP32-C3-WROOM-02-H4.lib  ESP32-C3-WROOM-02-N4.lib
tools/: run-codacy-focused.sh  summarize-codacy-focused.py
