idf_component_register(SRCS "main.c"
                            "mqtt.c" 
                            "websrv.c"
                            "websocksrv.c"
                            "keep-alive.c"
                            "can4vscp.c"
                            "urldecode.c"
                            "tcpsrv.c" 
                            "multicastsrv.c"
                            "udpsrv.c"
                            "callbacks-link.c"
                            "callbacks-vscp-protocol.c"
                            "vscp-ws1.c"
                            "callbacks-ws1.c"
                            "../third_party/vscp-firmware/common/vscp-link-protocol.c"
                            "../third_party/vscp-firmware/common/vscp-firmware-helper.c"
                            "../third_party/vscp-firmware/common/crc.c"
                            "../third_party/vscp-firmware/common/vscp-aes.c"

                    INCLUDE_DIRS "." 
                                  "../third_party/vscp-firmware/common/"
)
